--- a/src/app/heroes/page/new-page/new-page.component.html
+++ b/src/app/heroes/page/new-page/new-page.component.html
@@ -9,30 +9,55 @@
   <div class="col-12 sm:col-6">
     <mat-card>
       <mat-card-content>
-        <div class="grid">
+
+        <form class="grid" [formGroup]="heroForm" (ngSubmit)="onSubmit()">
+
           <mat-form-field class="col-12 sm:col-6">
             <mat-label>Super Héroe</mat-label>
-            <input matInput type="text" required />
+            <input 
+            matInput 
+            type="text" 
+            required 
+            formControlName="superhero"
+            />
           </mat-form-field>
 
           <mat-form-field class="col-12 sm:col-6">
             <mat-label>Alter ego</mat-label>
-            <input matInput type="text" required />
+            <input 
+            matInput 
+            type="text" 
+            required 
+            formControlName="alter_ego"
+            />
           </mat-form-field>
 
           <mat-form-field class="col-12">
             <mat-label>Primera aparición</mat-label>
-            <input matInput type="text" required />
+            <input 
+            matInput 
+            type="text" 
+            required 
+            formControlName="first_appearance"
+            />
           </mat-form-field>
 
           <mat-form-field class="col-12">
             <mat-label>Personajes</mat-label>
-            <input matInput type="text" required />
+            <input 
+            matInput 
+            type="text" 
+            required 
+            formControlName="characters"
+            />
           </mat-form-field>
 
           <mat-form-field class="col-12">
             <mat-label>Creador</mat-label>
-            <mat-select required="">
+            <mat-select 
+            formControlName="publisher"
+            required
+            >
               <mat-option
                 *ngFor="let publisher of publishers"
                 [value]="publisher.id"
@@ -41,7 +66,16 @@
               </mat-option>
             </mat-select>
           </mat-form-field>
-        </div>
+
+          <mat-form-field class="col-12">
+            <mat-label>Alternative Image</mat-label>
+            <input 
+            matInput 
+            type="text" 
+            formControlName="alt_img"
+            />
+          </mat-form-field>
+        </form>
 
         <div class="flex justify-content-between">
 
@@ -51,7 +85,9 @@
         </button>
 
         <button mat-flat-button
-        color="primary">
+        color="primary"
+        (click)="onSubmit()"
+        >
         <mat-icon>save</mat-icon>
             Guardar
         </button> 
