--- a/src/app/auth/pages/register-page/register-page.component.html
+++ b/src/app/auth/pages/register-page/register-page.component.html
@@ -16,7 +16,7 @@
         </mat-form-field>
     
         <button mat-button mat-flat-button color="primary">
-            <mat-icon>Crear cuenta</mat-icon>
+            <mat-icon>save</mat-icon>
             Ingresar
         </button>
     
