--- a/src/app/heroes/page/layout-page/layout-page.component.html
+++ b/src/app/heroes/page/layout-page/layout-page.component.html
@@ -26,7 +26,9 @@
 
     <span class="spacer"></span>
 
-    <button mat-button>Logout</button>
+    <span>{{user?.user}}</span>
+
+    <button mat-button (click)="onLogout()">Logout</button>
   </mat-toolbar>
 
   <div class="container p-2">
